src/styles/article.scss
@forward 'components/common.scss';
@use 'util/mq.scss' as mq;
@use 'util/color.scss' as c;

#content {
  article {
    padding: 1.25em clamp(1.25em, 4vw, 3em);
    background: white;
    border-radius: 12px;
    @include mq.narrowWidth() {
      border-radius: 0;
    }
    a {
      display: flex;
      padding: 1.7em 1.25em;
      margin: 2em 0;
      border-radius: 3px;
      border: 1px solid mix(c.$little-line, c.$dtechs-official, 90%);
      transition: .35s c.$out-bezier all;
      &:hover {
        transform: scale(1.02);
        border-color: white;
        box-shadow: 0 0 4px rgba(c.$dtechs-official, 0.5);
      }
      flex-direction: column;
      background-color: rgb(200 200 200 / 1%);
      text-decoration: none;
      color: black;
      p {
        margin: 0;
        &.title {
          margin-bottom: 0.2em;
        }
        &.domain {
          color: gray;
          font-size: 60%;
        }
      }
    }
    code.inline {
      background: mix(rgb(250, 250, 250),c.$dtechs-official ,90%);
      color: egb(200, 200, 200);
      border-radius: 3px;
      margin: 0 0.5em;
      padding: 0.2em 0.65em;
      white-space: pre-wrap;
    }
    section.codeblock {
      pre {
        white-space: pre-wrap;
      }
    }

    box-shadow: 0 0 8px rgb(0 0 0 / 5%);
  }

  section#title-wrapper {
    padding: 0.8em;
    display: flex;
    justify-content: center;
    align-items: center;
    h1 {
      display: inline;
    }
  }
}

